<resources>
    <string name="app_name">M A G U L A</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">M A G U L A</string>
    <string name="nav_header_subtitle">magula@gamil.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_registration">Registration</string>
    <string name="menu_login">Login</string>
    <string name="menu_service_account">Seller Account</string>
    <string name="menu_customer_account">User Account</string>
    <string name="menu_plan">Plan</string>
    <string name="menu_car_rental_service">Car rental service</string>
    <string name="menu_photography">Photography service</string>


    <string name="content_description_hotel">hotels</string>
    <string name="content_description_chooseAccount">Choose Account Image</string>
    <string name="content_description_hotelName">Hotel Name</string>
    <string name="content_description_address">Address</string>
    <string name="content_description_mobile_number">Mobile Number</string>
    <string name="content_description_price">Price</string>
    <string name="content_description_username">Username</string>
    <string name="content_description_password">password</string>
    <string name="content_description_people">people</string>

    <string name="choose_account_question">Select you want account type?</string>
    <string name="service_account_type">Seller Account</string>
    <string name="customer_account_type">User Account</string>

    <string name="next_button">Next</string>
    <string name="address">Address</string>
    <string name="mobile_number">077–1234567</string>
    <string name="price_per_plate">Price per plate</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="n_i_c">N I C</string>
    <string name="contact_no">Contact No:</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="registration">registration</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="plan">Plan</string>
    <string name="your_budget">Your Budget</string>
    <string name="number_of_people">Number of people</string>
    <string name="find">Find</string>
</resources>