<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_plan"
            android:title="@string/plan"/>
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/menu_login"/>
        <item
            android:id="@+id/nav_choose_account"
            android:icon="@drawable/ic_menu_registration"
            android:title="@string/menu_registration" />
        <item
            android:id="@+id/nav_car_rental_account"
            android:icon="@drawable/ic_car"
            android:title="@string/menu_car_rental_service" />
        <item
            android:id="@+id/nav_photography_account"
            android:icon="@drawable/ic_photography"
            android:title="@string/menu_photography" />
    </group>

</menu>