<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.icbt.magula.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.icbt.magula.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/login_fragment"/>
    <fragment
        android:id="@+id/nav_choose_account"
        android:name="com.icbt.magula.ui.choose_account.ChooseAccountFragment"
        android:label="@string/menu_registration"
        tools:layout="@layout/choose_account_fragment"/>

</navigation>