<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="chooseAccountViewModel"
            type="com.icbt.magula.ui.choose_account.ChooseAccountViewModel" />

        <variable
            name="chooseAccountFragment"
            type="com.icbt.magula.ui.choose_account.ChooseAccountFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/choose_account_type_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_account_type"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/teal_500"
            android:contentDescription="@string/content_description_chooseAccount" />

        <TextView
            android:id="@+id/choose_account_type_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/choose_account_question"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@id/choose_account_type_image_view"
            app:layout_constraintStart_toEndOf="@+id/choose_account_type_image_view"
            app:layout_constraintTop_toTopOf="@+id/choose_account_type_image_view" />

        <RadioGroup
            android:id="@+id/choose_account_type_radio_button_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/choose_account_type_question"
            app:layout_constraintStart_toStartOf="@id/choose_account_type_question">

            <RadioButton
                android:id="@+id/customer_account_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_account_type"
                android:checked="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <RadioButton
                android:id="@+id/service_account_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_account_type"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </RadioGroup>

        <Button
            android:id="@+id/next_button"
            android:onClick="@{() -> chooseAccountFragment.onNextButtonClick()}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/choose_account_type_radio_button_group"
            app:layout_constraintStart_toStartOf="@id/choose_account_type_radio_button_group"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/next_button"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/next_button"
            app:layout_constraintStart_toStartOf="@+id/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:textColor="@color/teal_500"
            android:text="warning you first need to create user account!"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>